--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
     username: root
     password: 1234
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+logging:
+  level:
+    jdbc.sqlonly: DEBUG
+    org.springframework.web: DEBUG
+    com.zaxxer.hikari.HikariDataSource: ERROR
